# vertex-ai-starter

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .prettierrc  .repomixignore  CLAUDE.md  Dockerfile  README.md  SKILL.md  main.py  pyproject.toml  test-ai.py
.github/workflows/: ci.yml  deploy.yml  gitleaks.yml
agents/: ai.md  backend.md  py.md  security.md
src/api/: main.py
src/api/templates/: index.html
src/core/: ai.py  bigquery.py  config.py  manager.py  schema.py  storage.py
tests/: test_ai.py  test_storage.py
